fixed bug of instructions not opening on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -290,7 +290,7 @@ td {
   margin: 1.5vh 0;
 }
 
-.instr-click-to-exit {
+.instr-sources {
   font-size: 2vh;
   text-align: center;
   margin: 0.5vh 0 1vh 0;
